[gd_scene load_steps=4 format=3 uid="uid://d5m3luputitg"]

[ext_resource type="Script" path="res://cards/discardPile.gd" id="1_yuvgg"]
[ext_resource type="PackedScene" uid="uid://24c12fb3svqy" path="res://ui/info/pile_info.tscn" id="2_mdw44"]

[sub_resource type="Theme" id="Theme_owjdq"]
default_font_size = 256

[node name="DiscardPile" type="Node2D"]
script = ExtResource("1_yuvgg")

[node name="Color" type="Button" parent="."]
offset_left = -70.0
offset_top = -43.0
offset_right = 68.0
offset_bottom = 47.0

[node name="Label" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -48.0
offset_top = -41.0
offset_right = 932.0
offset_bottom = 389.0
scale = Vector2(0.1, 0.1)
mouse_filter = 2
theme = SubResource("Theme_owjdq")
text = "Discard"

[node name="CardCount" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -31.0
offset_top = 1.00011
offset_right = 579.0
offset_bottom = 361.0
scale = Vector2(0.1, 0.1)
mouse_filter = 2
theme = SubResource("Theme_owjdq")

[node name="PileInfo" parent="." instance=ExtResource("2_mdw44")]
visible = false
offset_left = -261.0
offset_top = -362.0
offset_right = 66.0
offset_bottom = -32.0

[connection signal="pressed" from="Color" to="." method="_on_color_pressed"]
